<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="logo">Logo</string>
    <string name="separator">-</string>
    <string name="comma">,</string>
    <string name="brackets_open">[</string>
    <string name="brackets_close">]</string>
    <string name="parenthesis_open">(</string>
    <string name="parenthesis_close">)</string>
	<string name="app_name">SMILE Teacher</string>
	<string name="server">Smileplug IP</string>
	<string name="connect">Connect</string>
	<string name="loading">Loading…</string>
	<string name="confirm">Confirm Deletion?</string>
	
	<!-- 	Toasts -->
	<string name="toast_connection_established">Connection established</string>
	<string name="toast_creating_session">Creating session…</string>
	<string name="toast_starting">Starting…</string>
	<string name="toast_solving">Solving…</string>
	<string name="toast_sorting">Sorting…</string>
	<string name="toast_recovering">Returning to Session ...</string>
	<string name="toast_retaking">Retaking…</string>
	<string name="toast_down_or_unavailable">Smileplug is down or unavailable</string>
	
<!-- 	Buttons -->
	<string name="btn_exit">Exit</string>
	<string name="btn_back">Back</string>
	<string name="btn_delete">Delete</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_confirm">Confirm</string>
	<string name="btn_next">Next</string>
	
<!-- 	Session values -->
	<string name="session_values">Information about teacher\'s session</string>
	<string name="teacher_name_hint">Teacher name</string>
	<string name="session_title_hint">Session title</string>
	<string name="group_name_hint">Group name</string>
	
	<string name="date_hint">Date</string>
	<string name="size_hint">Size</string>
	<string name="no_picture">No picture</string>
	
	<string name="start_making">Start Making Questions</string>
	<string name="use_prepared">Use Prepared Questions</string>
	<string name="start_solving">Start Solving \n Questions</string>
	<string name="show_results">Finish:\nShow Results</string>
	<string name="hide_results">Hide Results</string>
	<string name="students_uppercase">STUDENTS</string>
	<string name="questions_uppercase">QUESTIONS</string>
	<string name="students">Students</string>
	<string name="questions">Questions</string>

	<string name="question_status">QUESTION STATUS</string>
	<string name="number">Number</string>
	<string name="owner">Owner</string>
	<string name="correct">%Correct</string>
	<string name="rating">Highest Rating</string>
	<string name="rating_small">Rating</string>
	<string name="students_completed">completed</string>
	<string name="students_correct">correct</string>
	<string name="limit_to_succeed">Percent limit to succeed</string>

	<string name="send_report">Send a report</string>
	<string name="send_report_body">Please leave your report:</string>
	<string name="send_report_btn">Send</string>
	
	<string name="save_questions">Save Questions</string>
	<string name="save_questions_uppercase">SAVE QUESTIONS</string>
	<string name="students_status">STUDENT STATUS</string>
	<string name="students_name">Student Name</string>
	<string name="score">Score</string>
	<string name="total">TOTAL</string>
	<string name="top_scores">TOP SCORER</string>

	<string name="about">About</string>
	<string name="about_text">SMILE Teacher App 0.9.9b2:  The activity management application for teachers,
	called the SMILE Teacher, serves to manage and
	save data from the activity via an ad-hoc network. It is a
	Graphic User Interface-based application that can be
	launched on an Android tablet in conjunction with a the Server
	running on a PlugComputer. The application
	allows the teacher to facilitate inquiry-based learning in a collaborative environment
    It also allows the teacher to save the
	data from a given learning activity for later access.</string>
	<string name="ok">OK</string>

<!-- 	Use prepared questions -->
	<string name="choose_a_option">CHOOSE AN OPTION BELOW: </string>
	<string name="remaining_time">Remaining Time</string>
	<string name="use_time">Use Time Limit Mode</string>
	<string name="countdown">Countdown</string>
	<string name="select">Select Question File: </string>
	<string name="seconds">Seconds</string>
	<string name="minutes">Minutes</string>
	<string name="hours">Hours</string>

	<string name="created_by">Question(s) created by</string>
	<string name="top_scorer">Top Scorer</string>
	<string name="answers">Complete</string>
	<string name="question">Question</string>
	<string name="question_uppercase">QUESTION</string>
	<string name="iqset_uppercase">IQSET</string>
	<string name="student">Students</string>


	<string name="question_number">Question Number</string>
	<string name="correct_answer">Correct Answer</string>
	<string name="chosen_answer">My Answer</string>
	<string name="give_rating">My Rating</string>

	<string name="scoreboard_of">Scoreboard of</string>

	<string name="score_board">SCOREBOARD</string>

	<string name="create_by">Created by</string>
	<string name="alternative1">(1)</string>
	<string name="alternative2">(2)</string>
	<string name="alternative3">(3)</string>
	<string name="alternative4">(4)</string>

	<string name="saved">Saved</string>
	<string name="give_a_name">"Give a name: "</string>
	<string name="load">Load</string>

	<string name="checkbox">CheckBox</string>
	<string name="details">Details</string>
	<string name="detail">Detail</string>

	<string name="reset_game">Restart Session</string>
	<string name="retake_game">Re-take Session</string>
	<string name="retake">Re-take</string>
	<string name="exit">Are you sure you want to exit?</string>
	<string name="restart_game">Are you sure you want to restart session?</string>
	<string name="game_running">A Session is already running!</string>

	<string name="server_ip">10.1.0.1</string>
	<string name="ip">IP</string>
	<string name="not_saved">It was not possible to save the questions</string>
	<string name="not_saved_because_file_name">It was not possible to save the question(s) because the file already exists.  Please try a new filename</string>
	<string name="save">Save</string>
	<string name="number_owner_ip">Number / Owner / IP</string>
	<string name="session_time_expired">Session Time has Expired</string>
	<string name="close_dialog">Close dialog</string>
	<string name="send_results">Send Results</string>
	<string name="preview_send_email">Preview Send Email</string>
	<string name="enter_e_mails_bellow_">Enter e-mails bellow:</string>
	<string name="email_informative">( For more than one, separate by commas(,) )</string>
	<string name="email_informative_small">Emails (use commas \',\' for 2+)</string>
	<string name="enter_subject_bellow">Enter subject bellow:</string>
	<string name="subject">Subject</string>
	<string name="send">Send</string>
</resources>
