<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_marginLeft="5dip"
  	android:layout_marginRight="5dip">

    <View
	    android:id="@+id/view_separator1"
	    android:layout_width="70dip"
	    android:layout_height="3dip"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="10dip"
	    android:background="#FFFF0000" />
    
<!--     <View -->
<!--   		android:id="@+id/view_separator2" -->
<!-- 		android:layout_width="fill_parent" -->
<!-- 		android:layout_height="2dip" -->
<!-- 		android:background="@color/black" -->
<!-- 		android:layout_marginLeft="10dip" -->
<!--         android:layout_marginRight="10dip" -->
<!-- 		android:layout_marginTop="3dip" -->
<!-- 		android:layout_below="@id/view_separator1"/> -->

  	<TextView
  	  	android:id="@+id/tv_status"
  	  	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
      	android:text="@string/question_status"
      	android:textStyle="bold"
      	android:textSize="14sp"
      	android:textColor="@color/white"
      	android:background="@drawable/box_black"
      	android:layout_below="@id/view_separator1"
      	android:layout_centerHorizontal="true"/>

  	

	<TableLayout
	    android:id="@+id/tl_status"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/view_separator_bottom"
	    android:layout_below="@id/tv_status"
	    android:layout_marginTop="2dip"
	    android:shrinkColumns="*"
	    android:stretchColumns="*" >

	    <TableRow
	        android:id="@+id/tr_row"
	        android:layout_width="0dip"
	        android:background="@drawable/box_grey"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/tv_check"
	            android:layout_gravity="center|center_horizontal"
	            android:text="@string/save"
	            android:textColor="@color/black"
	            android:textSize="14sp" />

	        <TextView
	            android:id="@+id/tv_details"
	            android:layout_gravity="center|center_horizontal"
	            android:text="@string/details"
	            android:textColor="@color/black"
	            android:textSize="14sp" />

	        <TextView
	            android:id="@+id/tv_space1"
	            android:layout_gravity="center|center_horizontal"
	            android:textColor="@color/black" />

	        <TextView
	            android:id="@+id/tv_question"
	            android:layout_gravity="center|center_horizontal"
	            android:text="@string/number_owner_ip"
	            android:textColor="@color/black"
	            android:textSize="14sp" />

	        <TextView
	            android:id="@+id/tv_space2"
	            android:layout_gravity="center|center_horizontal"
	            android:textColor="@color/black" />

	        <TextView
	            android:id="@+id/tv_answers"
	            android:layout_gravity="center|center_horizontal"
	            android:text="@string/correct"
	            android:textColor="@color/black"
	            android:textSize="14sp" />

	        <TextView
	            android:id="@+id/tv_score"
	            android:layout_gravity="center|center_horizontal"
	            android:text="@string/rating_small"
	            android:layout_marginRight="15dp"
	            android:textColor="@color/black"
	            android:textSize="14sp" />
	    </TableRow>

	    <View
	        android:id="@+id/view_separator_1"
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="@color/gray" />

	    <ListView
	        android:id="@+id/lv_questions"
	        android:layout_width="fill_parent"
	        android:layout_height="137dp"
	        android:layout_weight="0.03" />
	</TableLayout>
	
	<View
	    android:id="@+id/view_separator_bottom"
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:layout_above="@+id/bt_save"
	    android:background="@color/gray" />

	<Button
	    android:id="@+id/bt_write_report"
	    android:textColor="@color/black"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/bt_save"
	    android:layout_marginRight="15dip"
	    android:layout_toLeftOf="@+id/bt_save"
	    android:enabled="false"
	    android:text="@string/send_report"
	    android:textSize="12sp" />
	
	<Button
  		android:id="@+id/bt_save"
  		android:textColor="@color/black"
  		android:enabled="false"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/save_questions"
  		android:textSize="12sp"
  		android:layout_margin="3dip"
  		android:layout_alignParentBottom="true"
  		android:layout_alignParentRight="true"/>

</RelativeLayout>