<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:background="@drawable/rounded_border"
  	android:layout_gravity="center"
  	android:layout_margin="30dip">

  	<TextView
	  	android:id="@+id/tv_title"
	  	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:text="@string/choose_a_option"
		android:textColor="@color/black"
		android:textSize="18sp"
		android:layout_centerHorizontal="true"/>

	<View
		android:id="@+id/view_separator"
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/gray"
		android:layout_marginTop="5dip"
		android:layout_below="@id/tv_title"/>

	<Button
  		android:id="@+id/bt_start"
  		android:layout_width="150dip"
  		android:layout_height="100sp"
  		android:text="@string/start_making"
  		android:textSize="18sp"
  		android:layout_marginLeft="50sp"
  		android:layout_centerVertical="true"
  		android:layout_alignParentLeft="true"/>

	<Button
  		android:id="@+id/bt_use_prerared"
  		android:layout_width="150sp"
  		android:layout_height="100sp"
  		android:text="@string/use_prepared"
  		android:textSize="18sp"
  		android:layout_marginRight="50sp"
		android:layout_centerVertical="true"
		android:layout_alignParentRight="true"/>

	<View
		android:id="@+id/view_separator2"
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/gray"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginBottom="20dip"
		android:layout_alignParentBottom="true"/>

	<View
		android:id="@+id/view_separator_middle"
		android:layout_width="1dip"
		android:layout_height="fill_parent"
		android:background="@color/gray"
		android:layout_margin="20dip"
		android:layout_centerInParent="true"
		android:layout_below="@+id/view_separator"
		android:layout_above="@+id/view_separator2"/>

</RelativeLayout>
