<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:background="@drawable/rounded_border"
  	android:layout_gravity="center"
  	android:gravity="center_horizontal"
  	android:layout_marginTop="10dip"
  	android:layout_marginBottom="25dip"
  	android:layout_marginLeft="10dip"
  	android:layout_marginRight="10dip"
  	>
  	
    <ImageButton 
        android:id="@+id/bt_close"
        android:layout_width="30dip"
        android:layout_height="30dip" 
        android:background="@drawable/btn_close"
        android:contentDescription="@string/close_dialog"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true" />
    
    <View
		android:id="@+id/view_separator"
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="@color/black"
		android:layout_margin="5dip"
		android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/sv_body"
        android:layout_width="750dp"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bt_send"
        android:layout_below="@+id/view_separator_bellow"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dip"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="12dip"
        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
        android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track" >

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="left" />

    </ScrollView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt_close"
        android:layout_centerHorizontal="true"
        android:text="@string/preview_send_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_enter_emails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_separator"
        android:layout_below="@+id/view_separator"
        android:text="@string/enter_e_mails_bellow_"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_informative_emails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_enter_emails"
        android:layout_below="@+id/tv_enter_emails"
        android:text="@string/email_informative_small"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_send"
        android:layout_alignRight="@+id/bt_close"
        android:layout_alignTop="@+id/view_separator"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_send"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginBottom="110dp"
        android:ems="10"
        android:inputType="textEmailSubject"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_subject"
        android:layout_alignBottom="@+id/et_subject"
        android:layout_alignLeft="@+id/tv_informative_emails"
        android:text="@string/enter_subject_bellow"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tv_title"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="23dp"
        android:layout_toRightOf="@+id/tv_informative_emails"
        android:text="@string/send"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_separator_bellow"
        android:layout_width="750dp"
        android:layout_height="1dip"
        android:layout_alignRight="@+id/bt_close"
        android:layout_below="@+id/tv_subject"
        android:layout_margin="5dip"
        android:background="@color/black" />

</RelativeLayout>