<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white">

	<RelativeLayout
	    android:id="@+id/ll_buttons"
	    android:layout_width="fill_parent"
	    android:layout_height="80dip"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true" >

	    <View
			android:id="@+id/view_separator_middle"
			android:layout_width="1dip"
			android:layout_height="fill_parent"
			android:background="@color/gray"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:layout_centerInParent="true"/>

		<Button
		    android:id="@+id/bt_results"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_alignBottom="@+id/view_separator_middle"
		    android:layout_margin="5dip"
		    android:layout_toRightOf="@+id/bt_solve"
		    android:text="@string/show_results"
		    android:textSize="14sp" />

		<TextView
	  		android:id="@+id/tv_time"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:textColor="@color/black"
	  		android:textSize="18sp"
	  		android:layout_marginRight="10dip"
	  		android:layout_alignParentRight="true"
	  		android:layout_below="@+id/tv_remaining_time"/>

		<TextView
		    android:id="@+id/tv_remaining_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignRight="@+id/tv_time"
		    android:layout_alignTop="@+id/bt_results"
		    android:text="@string/remaining_time"
		    android:textColor="@color/black"
		    android:textSize="18sp" />

		<TextView
		    android:id="@+id/tv_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_toRightOf="@+id/tv_server"
		    android:layout_marginLeft="10sp"
		    android:layout_marginTop="10sp"
		    android:gravity="center"
		    android:singleLine="false"
		    android:textColor="@color/black"
		    android:textSize="12sp"
		    android:textStyle="bold" />

		<Button
		    android:id="@+id/bt_solve"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_alignBottom="@+id/view_separator_middle"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentTop="true"
		    android:layout_margin="5dip"
		    android:lines="2"
		    android:text="@string/start_solving"
		    android:textSize="14sp" />

		<TextView
		    android:id="@+id/tv_server"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_toRightOf="@+id/view_separator_middle"
		    android:layout_marginTop="10sp"
		    android:gravity="center"
		    android:singleLine="false"
		    android:textColor="@color/black"
		    android:textSize="12sp"
		    android:textStyle="bold" />

	</RelativeLayout>

	<View
		android:id="@+id/view_separator2"
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="@color/black"
		android:layout_below="@id/ll_buttons"/>

	<TextView
  		android:id="@+id/tv_students"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/students_uppercase"
  		android:textColor="@color/black"
  		android:textSize="20sp"
  		android:textStyle="bold"
  		android:layout_marginLeft="10dip"
  		android:layout_marginTop="10dip"
  		android:layout_alignParentLeft="true"
  		android:layout_below="@id/ll_buttons"/>

	<TextView
  		android:id="@+id/tv_questions"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/questions_uppercase"
  		android:textColor="@color/black"
  		android:textSize="20sp"
  		android:textStyle="bold"
  		android:layout_centerHorizontal="true"
  		android:layout_marginRight="10dip"
  		android:layout_marginTop="10dip"
  		android:layout_alignParentRight="true"
  		android:layout_below="@id/ll_buttons"/>

	<LinearLayout
	    android:id="@+id/ll_container_fragment"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:layout_below="@id/tv_students"
	    android:layout_marginTop="5dip">

		<android.support.v4.view.ViewPager
		    android:id="@+id/vp_awesomepager"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	</LinearLayout>

</RelativeLayout>
